// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errorParse variable "=#CurrentBlock.baz" -> [deps] ""baz" not found" 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "00000000-0000-0000-0000-000000000000",
          "type": "id",
          "value": "00000000-0000-0000-0000-000000000000",
        },
        "id": "00000000-0000-0000-0000-000000000000",
        "kind": "Block",
        "name": "Default",
        "namespaceId": "00000000-0000-0000-0000-000000000000",
      },
      "code": "Block",
      "display": "#CurrentBlock",
      "errors": Array [],
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionName",
      "display": "baz",
      "errors": Array [
        Object {
          "message": "\\"baz\\" not found",
          "type": "deps",
        },
      ],
      "type": "string",
    },
  ],
]
`;

exports[`errorParse variable "=Variable.baz" -> [deps] ""baz" not found" 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-2222-2222-222222222222",
        },
        "id": "22222222-2222-2222-2222-222222222222",
        "kind": "Block",
        "name": "Variable",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Block",
      "display": "Variable",
      "errors": Array [],
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionName",
      "display": "baz",
      "errors": Array [
        Object {
          "message": "\\"baz\\" not found",
          "type": "deps",
        },
      ],
      "type": "string",
    },
  ],
]
`;

exports[`errorParse variable "=baz" -> [syntax] ""baz" not found" 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionName",
      "display": "baz",
      "errors": Array [
        Object {
          "message": "\\"baz\\" not found",
          "type": "syntax",
        },
      ],
      "type": "any",
    },
  ],
]
`;

exports[`errorParse variable "=fo" -> [syntax] ""fo" not found" 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionName",
      "display": "fo",
      "errors": Array [
        Object {
          "message": "\\"fo\\" not found",
          "type": "syntax",
        },
      ],
      "type": "any",
    },
  ],
]
`;
